--- a/api/public.yaml
+++ b/api/public.yaml
@@ -18,6 +18,14 @@ definitions:
         type: object
     GetGameResponse:
         $ref: '#/definitions/Game'
+    GetPrizesResponse:
+        items:
+            $ref: '#/definitions/Prize'
+        type: array
+    GetUsersResponse:
+        items:
+            $ref: '#/definitions/User'
+        type: array
     ParticipationRequest:
         properties:
             fields:
@@ -28,14 +36,44 @@ definitions:
         properties:
             prizes:
                 items:
-                    $ref: '#/definitions/Prize'
+                    $ref: '#/definitions/PublicPrize'
                 type: array
         type: object
     Prize:
         properties:
+            count:
+                format: int64
+                type: integer
+            description:
+                type: string
+            gameId:
+                type: string
+            id:
+                type: string
+            name:
+                type: string
+        type: object
+    PublicPrize:
+        properties:
             description:
                 type: string
             name:
+                type: string
+        type: object
+    User:
+        properties:
+            additional_fields:
+                additionalProperties: {}
+                type: object
+            address:
+                type: string
+            email:
+                type: string
+            game_id:
+                type: string
+            id:
+                type: string
+            phone:
                 type: string
         type: object
 host: localhost:8080
@@ -44,7 +82,7 @@ info:
     license:
         name: MIT
         url: https://opensource.org/licenses/MIT
-    title: Prizer
+    title: Prizer Public API
     version: "1.0"
 paths:
     /participationMethod/{participationMethodId}/participate:
