--- a/api/public.yaml
+++ b/api/public.yaml
@@ -2,11 +2,32 @@ basePath: /
 consumes:
     - application/json
 definitions:
+    CreatePrizeRequest:
+        properties:
+            count:
+                format: int64
+                type: integer
+            description:
+                type: string
+            game_id:
+                type: string
+            image_url:
+                type: string
+            name:
+                type: string
+        required:
+            - game_id
+            - name
+            - description
+            - count
+        type: object
     DrawMethod:
         properties:
             data:
                 type: string
             draw_method_id:
+                type: string
+            game_id:
                 type: string
             method:
                 enum:
@@ -17,6 +38,7 @@ definitions:
                 type: string
         required:
             - draw_method_id
+            - game_id
             - name
             - method
             - data
@@ -168,7 +190,7 @@ definitions:
                 type: integer
             description:
                 type: string
-            gameId:
+            game_id:
                 type: string
             id:
                 type: string
@@ -176,12 +198,16 @@ definitions:
                 type: string
             name:
                 type: string
+            won_count:
+                format: int64
+                type: integer
         required:
             - id
-            - gameId
+            - game_id
             - name
             - description
             - count
+            - won_count
         type: object
     PublicPrize:
         properties:
@@ -271,6 +297,9 @@ paths:
                 - participationMethod
 produces:
     - application/json
+responses:
+    EmptyResponse:
+        description: ""
 schemes:
     - http
     - https
