--- a/api/admin.yaml
+++ b/api/admin.yaml
@@ -18,7 +18,6 @@ definitions:
         required:
             - game_id
             - name
-            - description
             - count
         type: object
     DrawMethod:
@@ -152,18 +151,18 @@ definitions:
                 type: string
             id:
                 type: string
-            limit:
+            name:
+                type: string
+            participation_limit:
                 enum:
                     - none
                     - daily
-                type: string
-            name:
                 type: string
         required:
             - id
             - game_id
             - name
-            - limit
+            - participation_limit
             - fields
         type: object
     ParticipationRequest:
@@ -205,7 +204,6 @@ definitions:
             - id
             - game_id
             - name
-            - description
             - count
             - won_count
         type: object
@@ -219,7 +217,38 @@ definitions:
                 type: string
         required:
             - name
-            - description
+        type: object
+    UpdateParticipationMethodRequest:
+        properties:
+            fields:
+                $ref: '#/definitions/FieldConfig'
+            lose_mail_template_id:
+                type: string
+            name:
+                type: string
+            participation_limit:
+                enum:
+                    - none
+                    - daily
+                type: string
+            win_mail_template_id:
+                type: string
+        required:
+            - name
+            - participation_limit
+            - fields
+        type: object
+    UpdatePrizeRequest:
+        properties:
+            count:
+                format: int64
+                type: integer
+            description:
+                type: string
+            image_url:
+                type: string
+            name:
+                type: string
         type: object
     User:
         properties:
@@ -371,6 +400,97 @@ paths:
             tags:
                 - admin
                 - participationMethods
+    /participation-methods/{participationMethodId}:
+        put:
+            operationId: updateParticipationMethod
+            parameters:
+                - in: path
+                  name: participationMethodId
+                  required: true
+                  type: string
+                - in: body
+                  name: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/UpdateParticipationMethodRequest'
+                    type: object
+            responses:
+                "204":
+                    $ref: '#/responses/EmptyResponse'
+                "400":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "403":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "500":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+            tags:
+                - admin
+                - participationMethods
+    /participation-methods/{participationMethodId}/draw-methods/{drawMethodId}:
+        delete:
+            operationId: unlinkDrawMethod
+            parameters:
+                - in: path
+                  name: participationMethodId
+                  required: true
+                  type: string
+                - in: path
+                  name: drawMethodId
+                  required: true
+                  type: string
+            responses:
+                "204":
+                    $ref: '#/responses/EmptyResponse'
+                "400":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "403":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "500":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+            tags:
+                - admin
+                - participationMethods
+        post:
+            operationId: linkDrawMethod
+            parameters:
+                - in: path
+                  name: participationMethodId
+                  required: true
+                  type: string
+                - in: path
+                  name: drawMethodId
+                  required: true
+                  type: string
+            responses:
+                "204":
+                    $ref: '#/responses/EmptyResponse'
+                "400":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "403":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "500":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+            tags:
+                - admin
+                - participationMethods
     /prizes:
         get:
             operationId: getPrizes
@@ -432,6 +552,36 @@ paths:
                   name: prizeId
                   required: true
                   type: string
+            responses:
+                "204":
+                    $ref: '#/responses/EmptyResponse'
+                "400":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "403":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+                "500":
+                    description: ErrorResponse
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+            tags:
+                - admin
+                - prizes
+        put:
+            operationId: updatePrize
+            parameters:
+                - in: path
+                  name: prizeId
+                  required: true
+                  type: string
+                - in: body
+                  name: body
+                  schema:
+                    $ref: '#/definitions/UpdatePrizeRequest'
+                    type: object
             responses:
                 "204":
                     $ref: '#/responses/EmptyResponse'
